--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -1,32 +1,23 @@
 {
   "name": "react-todo",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
-    
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "jest": "^30.0.5",
-    "vite": "^7.1.2"
+    "@babel/preset-env": "^7.x",
+    "@babel/preset-react": "^7.x",
+    "@testing-library/jest-dom": "^6.x",
+    "@testing-library/react": "^14.x",
+    "babel-jest": "^29.x",
+    "jest": "^29.x",
+    "jest-environment-jsdom": "^30.0.5"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
